Fix white space issue

--- a/src/application/components/HighlightedText.module.scss
+++ b/src/application/components/HighlightedText.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: inline-flex;
   flex-wrap: wrap;
+  white-space: break-spaces;
 }
 
 .highLightedText {
